# simplifynext_hack

./: .gitignore  .pre-commit-config.yaml  README.md  intake_agent.json  planner-agent.json  planner_event.ics  setup.md  test.py
.github/workflows/: python-lint.yml  (+1 more)
.husky/: pre-commit
client/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
server/: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
server/.github/workflows/: python-lint.yml
server/agents/: __init__.py  analyser_agent.py  base_agent.py  guardrail_agent.py  intake_agent.py  packager.py  packager_v2.py  planner_agent.py  planner_agent_rules.json  qa_guardrail_agent.py  schema.py
server/agents/outputs/: analysis_result.json  dashboard.json  dashboard_data.json  intake_agent.json  planner-agent.json  planner_event.ics  tenant_email_20250905.html
server/agents/outputs/artifacts/: agreement_review_20250827.ics  agreement_summary_20250827.json  negotiation_rider_20250827.json  negotiation_rider_20250828.json  tenant_email_20250827.json
server/agents/outputs/download/: README.md  dashboard.json  download_index.json  frontend_package.json  negotiation_rider_20250828.json
server/agents/prompts/: agent_prompts.yaml
server/agents/rules/: guardrail.yaml  rulebook.yaml
server/controller/: upload_controller.py
server/server/agents/outputs/: analysis_result.json  dashboard_data.json  intake_agent.json  planner-agent.json
server/service/: email_service.py  ocr_service.py
server/util/: config.py  email_module.py  ics_module.py  intake_config.py
(+7 files in other folders)
